feat: use external header file and schema option for admin import example (#227)
* fix: 2025.05 properly supports CSV header for Parquet, thx @meistermeier!

* fix: enforce at most 1 key constraint per node target

Multiple group IDs are not supported by admin-import.

* feat: delegate schema statements to admin-import

This is supported since 2025.02 (only for the now-default block
format).

* test: upgrade Neo4j to get Parquet temporal improvements

Temporal improvements were released with 2025.09